docs(multi-impl): ABCL 1.9.2 green (local + Ubuntu) (#42)
Homebrew + clean ubuntu:24.04 linux/arm64 pass crypto/secrets Rove.
Note quit arity, JDK setup, PBKDF2 cost; add test-abcl fragment.